# dot-yadm

./: .profile  .zshenv  .zshrc
.config/: alias  brewfile
.config/bash/: bashrc
.config/git/: config
.config/git/git_template/hooks/: ctags  post-merge
.config/nvim/: .netrwhist  coc-settings.json  init.vim  pyproject.toml  setup_nvim_python.sh
.config/nvim/ftplugin/: markdown.vim  python.vim  yaml.vim
.config/pyenv/: pyenv.conf  pyenv.conf##default  pyenv.conf##h.lecun
.config/tmux/: tmux.conf
.config/yadm/: bootstrap
.config/zsh/: .zshrc
.ipython/profile_default/: ipython_config.py
.ssh/: config
