[tool.poetry]
name = "nvim"
version = "0.1.0"
description = ""
authors = ["Diego Kiedanski <dkiedanski@tryolabs.com>"]

[tool.poetry.dependencies]
python = "^3.8"
neovim = "^0.3.1"
flake8 = "^3.8.4"
black = "^20.8b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
